--- a/news.html
+++ b/news.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-12-10" />
+<meta name="date" content="2023-12-31" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -77,7 +77,8 @@
 
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Finance</a></li>
-<li class="chapter" data-level="2" data-path="time-diversification.html"><a href="time-diversification.html"><i class="fa fa-check"></i><b>2</b> Time Diversification</a></li>
+<li class="chapter" data-level="2" data-path="investment-externalities.html"><a href="investment-externalities.html"><i class="fa fa-check"></i><b>2</b> Investment externalities</a></li>
+<li class="chapter" data-level="3" data-path="time-diversification.html"><a href="time-diversification.html"><i class="fa fa-check"></i><b>3</b> Time Diversification</a></li>
 <li class="part"><span><b>I Appendices</b></span></li>
 <li class="appendix"><span><b>Appendices</b></span></li>
 <li class="chapter" data-level="A" data-path="about.html"><a href="about.html"><i class="fa fa-check"></i><b>A</b> About</a></li>
@@ -110,16 +111,16 @@
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="news" class="section level1 hasAnchor" number="5">
+<div id="news" class="section level1 hasAnchor" number="6">
 <h1><span class="header-section-number">C</span> NEWS<a href="news.html#news" class="anchor-section" aria-label="Anchor link to header"></a></h1>
-<div id="silicon-valley-bank" class="section level2 hasAnchor" number="5.1">
+<div id="silicon-valley-bank" class="section level2 hasAnchor" number="6.1">
 <h2><span class="header-section-number">C.1</span> 230319 Silicon Valley Bank<a href="news.html#silicon-valley-bank" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><em>Tooze</em></p>
 <p>One of the underlying frailties of the global banking system right now, are the unrealized losses on bonds incurred by banks as a result of central banks hiking interest rates to combat inflation. As interest rates have gone up, bond prices have gone down. This is bad news, if billions in depositor-withdrawals force you to sell the bonds thus “realizing” the loss. But, if you are not in dire straights, if you are not selling off your portfolio in fire sales, where do you run if the financial world seems to be falling apart (again)? The safe place to run to is … yup … government bonds. They are safe. The market is liquid. Plus, they are cheap right now!</p>
 <p>So, a crisis that was triggered in part by bond prices going down, led investors to run into bonds and drive prices back up. A panglossian friend of the markets might say that this is the self-equilibrating invisible hand at work. This is not how it felt last week.</p>
 <p><a href="https://adamtooze.substack.com/p/chartbook-203-banking-crises-states">Tooze (2023) Chartbook #203 Banking crises, states of exception &amp; the disappointment of sovereignty - a roundup of last week</a></p>
 </div>
-<div id="occ-nominee-fight" class="section level2 hasAnchor" number="5.2">
+<div id="occ-nominee-fight" class="section level2 hasAnchor" number="6.2">
 <h2><span class="header-section-number">C.2</span> 211118 OCC Nominee fight<a href="news.html#occ-nominee-fight" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><em>The Prospect</em></p>
 <blockquote>
@@ -132,7 +133,7 @@
 <p>The history of the OCC over the past half-century gives those critics abundant evidence that the agency operates as a bank advocate masquerading as a prudent regulator.</p>
 <p><a href="https://prospect.org/economy/wall-streets-attacks-on-biden-nominee-red-herring-saule-omarova/">The Prospect (2021) Wall Street’s Attacks on Biden Nominee Are a Red Herring</a></p>
 </div>
-<div id="gfanz-low-carbon-banking" class="section level2 hasAnchor" number="5.3">
+<div id="gfanz-low-carbon-banking" class="section level2 hasAnchor" number="6.3">
 <h2><span class="header-section-number">C.3</span> 210421 GFANZ: Low Carbon Banking<a href="news.html#gfanz-low-carbon-banking" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>Banks and financial institutions with more than $70tn assets have pledged to cut their greenhouse gas emissions and ensure their investment portfolios align with the science on the climate.</p>
 <p>In the initiative, chaired by Mark Carney, the former governor of the Bank of England, 160 companies, including 43 banks from 23 countries, will set targets to cut the carbon content of their assets by 2030, in line with an overall goal of net zero emissions by 2050.</p>
@@ -148,7 +149,7 @@ Advertisement</p>
 <p>Officials said there would be no blanket requirements for companies to stop financing coal, for instance, and banks would be allowed to make their own judgments on the carbon content of their portfolios, on a case by case basis.</p>
 <p><a href="https://www.theguardian.com/business/2021/apr/21/leading-finance-firms-sign-up-to-mark-carney-forum-on-low-carbon-investment">Guardian</a></p>
 </div>
-<div id="biodiversity-and-financial-stability" class="section level2 hasAnchor" number="5.4">
+<div id="biodiversity-and-financial-stability" class="section level2 hasAnchor" number="6.4">
 <h2><span class="header-section-number">C.4</span> 210406 Biodiversity and Financial Stability<a href="news.html#biodiversity-and-financial-stability" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><strong>NGFS and INSPIRE launch a joint research project on ‘Biodiversity and Financial Stability’</strong></p>
 <p>A growing number of central banks and supervisors have recognised the need to extend their focus from climate change to the challenges of addressing the implications of broader nature-related risks and the conservation of nature and biodiversity. Doing this will involve understanding the impact of finance on the provision of key ecosystem services as well as the consequences of biodiversity loss for financial stability.</p>
