--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-12-10" />
+<meta name="date" content="2023-12-31" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -31,7 +31,7 @@
   
   
 
-<link rel="next" href="time-diversification.html"/>
+<link rel="next" href="investment-externalities.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -77,7 +77,8 @@
 
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Finance</a></li>
-<li class="chapter" data-level="2" data-path="time-diversification.html"><a href="time-diversification.html"><i class="fa fa-check"></i><b>2</b> Time Diversification</a></li>
+<li class="chapter" data-level="2" data-path="investment-externalities.html"><a href="investment-externalities.html"><i class="fa fa-check"></i><b>2</b> Investment externalities</a></li>
+<li class="chapter" data-level="3" data-path="time-diversification.html"><a href="time-diversification.html"><i class="fa fa-check"></i><b>3</b> Time Diversification</a></li>
 <li class="part"><span><b>I Appendices</b></span></li>
 <li class="appendix"><span><b>Appendices</b></span></li>
 <li class="chapter" data-level="A" data-path="about.html"><a href="about.html"><i class="fa fa-check"></i><b>A</b> About</a></li>
@@ -113,7 +114,7 @@
 <div id="header">
 <h1 class="title">Financial Issues</h1>
 <p class="author"><em>Dyrehaugen Web Notebook</em></p>
-<p class="date"><em>2023-12-10</em></p>
+<p class="date"><em>2023-12-31</em></p>
 </div>
 <div id="finance" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">1</span> Finance<a href="index.html#finance" class="anchor-section" aria-label="Anchor link to header"></a></h1>
@@ -156,7 +157,7 @@ But those returns cannot last indefinitely. (Katharina Pistor)</p>
         </div>
       </div>
 
-<a href="time-diversification.html" class="navigation navigation-next navigation-unique" aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="investment-externalities.html" class="navigation navigation-next navigation-unique" aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
