--- a/links.html
+++ b/links.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-12-10" />
+<meta name="date" content="2023-12-31" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -77,7 +77,8 @@
 
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Finance</a></li>
-<li class="chapter" data-level="2" data-path="time-diversification.html"><a href="time-diversification.html"><i class="fa fa-check"></i><b>2</b> Time Diversification</a></li>
+<li class="chapter" data-level="2" data-path="investment-externalities.html"><a href="investment-externalities.html"><i class="fa fa-check"></i><b>2</b> Investment externalities</a></li>
+<li class="chapter" data-level="3" data-path="time-diversification.html"><a href="time-diversification.html"><i class="fa fa-check"></i><b>3</b> Time Diversification</a></li>
 <li class="part"><span><b>I Appendices</b></span></li>
 <li class="appendix"><span><b>Appendices</b></span></li>
 <li class="chapter" data-level="A" data-path="about.html"><a href="about.html"><i class="fa fa-check"></i><b>A</b> About</a></li>
@@ -110,7 +111,7 @@
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="links" class="section level1 hasAnchor" number="4">
+<div id="links" class="section level1 hasAnchor" number="5">
 <h1><span class="header-section-number">B</span> Links<a href="links.html#links" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p><strong>Current Dyrehaugen Sites:</strong></p>
 <ul>
